--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/koa": "^2.11.0",
     "@types/koa-router": "^7.4.0",
     "@types/koa-websocket": "^5.0.4",
+    "@types/mysql": "^2.15.8",
     "@types/redis": "^2.8.14",
     "@types/socket.io": "^2.1.4",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "koa-router": "^7.4.0",
     "koa-socket-2": "^1.2.0",
     "koa-websocket": "^6.0.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "redis": "^2.8.0",
     "redis-typescript": "^0.1.2",
@@ -37,10 +39,12 @@
     "@types/generic-pool": "^3.1.9",
     "@types/koa-route": "^3.2.4",
     "@types/koa__cors": "^3.0.1",
+    "@types/mysql": "^2.15.8",
     "@types/node": "^13.5.2",
     "@types/redis": "^2.8.14",
     "generic-pool": "^3.7.1",
     "koa-cors": "0.0.16",
+    "mysql": "^2.18.1",
     "qiniu": "^7.3.0",
     "redis": "^2.8.0"
   }
